--- a/src/index.html
+++ b/src/index.html
@@ -94,8 +94,13 @@
               Мы гордимся тем, что к нам обращаются по рекомендациям и, в свою
               очередь, советуют нас родным и близким.
             </p>
-            <p class="description__text description__text--additional-third disable">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit eligendi modi perferendis voluptatibus velit ullam laborum corrupti, beatae reprehenderit id iure ab non illum repudiandae repellat magni facilis aliquid. Repudiandae?
+            <p
+              class="description__text description__text--additional-third disable"
+            >
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit
+              eligendi modi perferendis voluptatibus velit ullam laborum
+              corrupti, beatae reprehenderit id iure ab non illum repudiandae
+              repellat magni facilis aliquid. Repudiandae?
             </p>
             <div class="button-show description__button">
               <button
@@ -523,11 +528,27 @@
             ><img src="./img/menu/cross.svg" alt="Cross icon"
           /></button>
         </div>
-        <input class="input dialog__input" type="text" placeholder="Имя">
-        <input class="input dialog__input" type="number" placeholder="Телефон">
-        <input class="input dialog__input" type="email" placeholder="Электронная почта">
-        <textarea class="textarea dialog__textarea" placeholder="Сообщение"></textarea>
-        <p class="form__text">Нажимая “отправить”, вы даете согласие на<br /> <a class="form__link" href="">обработку персональных данных</a> и соглашаетесь с нашей <a class="form__link" href="">политикой конфиденциальности</a></p>
+        <input class="input dialog__input" type="text" placeholder="Имя" />
+        <input
+          class="input dialog__input"
+          type="number"
+          placeholder="Телефон"
+        />
+        <input
+          class="input dialog__input"
+          type="email"
+          placeholder="Электронная почта"
+        />
+        <textarea
+          class="textarea dialog__textarea"
+          placeholder="Сообщение"
+        ></textarea>
+        <p class="form__text"
+          >Нажимая “отправить”, вы даете согласие на<br />
+          <a class="form__link" href="">обработку персональных данных</a> и
+          соглашаетесь с нашей
+          <a class="form__link" href="">политикой конфиденциальности</a></p
+        >
         <div class="form__button-order">
           <button class="button-order">Отправить</button>
         </div>
@@ -542,22 +563,36 @@
             ><img src="./img/menu/cross.svg" alt="Cross icon"
           /></button>
         </div>
-        <input class="input dialog__input" type="number" placeholder="Телефон">
-        <p class="form__text">Нажимая “отправить”, вы даете согласие на<br /> <a class="form__link" href="">обработку персональных данных</a> и соглашаетесь с нашей <a class="form__link" href="">политикой конфиденциальности</a></p>
+        <input
+          class="input dialog__input"
+          type="number"
+          placeholder="Телефон"
+        />
+        <p class="form__text"
+          >Нажимая “отправить”, вы даете согласие на<br />
+          <a class="form__link" href="">обработку персональных данных</a> и
+          соглашаетесь с нашей
+          <a class="form__link" href="">политикой конфиденциальности</a></p
+        >
         <div class="form__button-order">
           <button class="button-order">Отправить</button>
         </div>
       </form>
     </dialog>
     <footer class="footer">
-      <p class="footer__text"
-        >© 2019 CPS<br class="footer__break"/>
-        Разработано командой Apesong</p
-      >
-      <p class="footer__text">Политика конфиденциальности</p>
-      <p class="footer__text"
-        >Информация, размещенная на данной странице,<br class="footer__break"/> не является публичной офертой</p
-      >
+      <div class="footer__wrapper">
+        <p class="footer__text"
+          >© 2019 CPS<br class="footer__break" />
+          Разработано командой Apesong</p
+        >
+        <p class="footer__text">Политика конфиденциальности</p>
+        <p class="footer__text"
+          >Информация, размещенная на данной странице,<br
+            class="footer__break"
+          />
+          не является публичной офертой</p
+        >
+      </div>
     </footer>
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
   </body>
